[gd_scene load_steps=51 format=3 uid="uid://bfnkr77fo1w1j"]

[ext_resource type="Script" uid="uid://g0hskpwf16sx" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/wolf_enemy.gd" id="1_uclj7"]
[ext_resource type="Texture2D" uid="uid://ydi7nkbwn6sw" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/sprites/wolf_melee.png" id="2_pyywh"]
[ext_resource type="Texture2D" uid="uid://jdqbr62c26pm" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/sprites/wolf_atk_spear.png" id="3_582ca"]
[ext_resource type="Texture2D" uid="uid://bvom8pm42xgs8" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/sprites/wolf_ilde.png" id="4_ewucb"]
[ext_resource type="Texture2D" uid="uid://wktqjdpio5xs" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/sprites/wolf_walk.png" id="5_n5l62"]
[ext_resource type="Script" uid="uid://dl2x7ha6p2sab" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/fight_scripts/detect_area.gd" id="6_582ca"]
[ext_resource type="Script" uid="uid://dxj2ohc2ph77s" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/wolf_enemy_sprite.gd" id="6_n5l62"]
[ext_resource type="Script" uid="uid://cjsuk3c0l0xjk" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/fight_scripts/follow_area.gd" id="7_ewucb"]
[ext_resource type="Script" uid="uid://b42by8ch7ok4w" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/fight_scripts/melee_area.gd" id="9_k6xar"]
[ext_resource type="Script" uid="uid://qivbmroka6h1" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/animation_player.gd" id="10_58lpr"]
[ext_resource type="Script" uid="uid://cawxtlfl00s3h" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/enemys/wolf/fight_scripts/hit_area.gd" id="10_d7h3h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6u3uu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k6xar"]
atlas = ExtResource("2_pyywh")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_58lpr"]
atlas = ExtResource("2_pyywh")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7h3h"]
atlas = ExtResource("2_pyywh")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wt7c"]
atlas = ExtResource("2_pyywh")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0squ"]
atlas = ExtResource("2_pyywh")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4nod"]
atlas = ExtResource("2_pyywh")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7objb"]
atlas = ExtResource("3_582ca")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3acbn"]
atlas = ExtResource("3_582ca")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpsf3"]
atlas = ExtResource("3_582ca")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5jrx"]
atlas = ExtResource("3_582ca")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk6vp"]
atlas = ExtResource("3_582ca")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxhog"]
atlas = ExtResource("3_582ca")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbv6j"]
atlas = ExtResource("3_582ca")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyjnn"]
atlas = ExtResource("4_ewucb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k80b"]
atlas = ExtResource("4_ewucb")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkc4a"]
atlas = ExtResource("5_n5l62")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kg2y"]
atlas = ExtResource("5_n5l62")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_31if1"]
atlas = ExtResource("5_n5l62")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4f45"]
atlas = ExtResource("5_n5l62")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7qq0"]
atlas = ExtResource("5_n5l62")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_flc8a"]
atlas = ExtResource("5_n5l62")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6skpn"]
atlas = ExtResource("5_n5l62")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sobhi"]
atlas = ExtResource("5_n5l62")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_niutc"]
atlas = ExtResource("5_n5l62")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixs3v"]
atlas = ExtResource("5_n5l62")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n4mu"]
atlas = ExtResource("5_n5l62")
region = Rect2(256, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_y3egr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6xar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58lpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7h3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wt7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0squ")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4nod")
}],
"loop": true,
"name": &"atk_melee",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7objb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3acbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpsf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5jrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk6vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxhog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbv6j")
}],
"loop": true,
"name": &"atk_spear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyjnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k80b")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkc4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kg2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31if1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4f45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7qq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flc8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6skpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sobhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niutc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixs3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n4mu")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0u2oh"]
radius = 234.053

[sub_resource type="CircleShape2D" id="CircleShape2D_yi2wd"]
radius = 356.88

[sub_resource type="CircleShape2D" id="CircleShape2D_58lpr"]
radius = 84.0952

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yy14c"]
size = Vector2(85, 117)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1feg"]
size = Vector2(50, 77)

[sub_resource type="Animation" id="Animation_suk6a"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WolfEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WolfEnemySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}

[sub_resource type="Animation" id="Animation_26e8e"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WolfEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WolfEnemySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_j84gp"]
resource_name = "atk_melee"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WolfEnemySprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"atk_melee"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WolfEnemySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WolfEnemyFighting/HitArea:process_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.37, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 0, 4]
}

[sub_resource type="Animation" id="Animation_8f5xt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WolfEnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WolfEnemySprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WolfEnemyFighting/HitArea:process_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_w725l"]
resource_name = "follow"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WolfEnemySprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WolfEnemySprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1refs"]
_data = {
&"RESET": SubResource("Animation_8f5xt"),
&"atk_melee": SubResource("Animation_j84gp"),
&"follow": SubResource("Animation_w725l"),
&"idle": SubResource("Animation_26e8e"),
&"walk": SubResource("Animation_suk6a")
}

[node name="WolfEnemy" type="CharacterBody2D"]
script = ExtResource("1_uclj7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6u3uu")

[node name="WolfEnemySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y3egr")
animation = &"walk"
script = ExtResource("6_n5l62")

[node name="WolfEnemyFighting" type="Node2D" parent="."]

[node name="DetectArea" type="Area2D" parent="WolfEnemyFighting"]
visible = false
script = ExtResource("6_582ca")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WolfEnemyFighting/DetectArea"]
shape = SubResource("CircleShape2D_0u2oh")

[node name="FollowArea" type="Area2D" parent="WolfEnemyFighting"]
visible = false
script = ExtResource("7_ewucb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WolfEnemyFighting/FollowArea"]
shape = SubResource("CircleShape2D_yi2wd")

[node name="MeleeArea" type="Area2D" parent="WolfEnemyFighting"]
visible = false
script = ExtResource("9_k6xar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WolfEnemyFighting/MeleeArea"]
shape = SubResource("CircleShape2D_58lpr")

[node name="HitBoxArea" type="Area2D" parent="WolfEnemyFighting"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WolfEnemyFighting/HitBoxArea"]
position = Vector2(-4.5, -2.5)
shape = SubResource("RectangleShape2D_yy14c")

[node name="HitArea" type="Area2D" parent="WolfEnemyFighting"]
process_mode = 4
script = ExtResource("10_d7h3h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WolfEnemyFighting/HitArea"]
position = Vector2(-59, -5)
shape = SubResource("RectangleShape2D_e1feg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1refs")
}
autoplay = "idle"
script = ExtResource("10_58lpr")

[connection signal="body_entered" from="WolfEnemyFighting/DetectArea" to="WolfEnemyFighting/DetectArea" method="_on_body_entered"]
[connection signal="body_exited" from="WolfEnemyFighting/FollowArea" to="WolfEnemyFighting/FollowArea" method="_on_body_exited"]
[connection signal="body_entered" from="WolfEnemyFighting/MeleeArea" to="WolfEnemyFighting/MeleeArea" method="_on_body_entered"]
[connection signal="body_entered" from="WolfEnemyFighting/HitArea" to="WolfEnemyFighting/HitArea" method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_animation_finished"]
